Fix time axis not scaling properly for scrollbar

--- a/css/main.css
+++ b/css/main.css
@@ -37,8 +37,7 @@ html, body
 
 .chart > .axis
 {
-    bottom: 8.25em;
-    top:    1.25em;
+    top: 1.25em;
 
     color:          black;
     display:        flex;
